fix: removed some whitespace above about image on desktop

--- a/jamieboydphoto/static/css/style.css
+++ b/jamieboydphoto/static/css/style.css
@@ -143,6 +143,7 @@ section {
     .about-row {
         padding-left: 20%;
         padding-right: 20%;
+        padding-top: 5%;
     }
 }
 
